Project 01: Finished aligning elements and getting colors correct.
Changed font-family to Helvetica Bold. Fixed a lot of margin stuff and switched the entire file to border-box box-sizing

--- a/project01/stylesheet.css
+++ b/project01/stylesheet.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 #global_container {
 	margin-right: auto;
 	margin-left: auto;
@@ -9,49 +13,64 @@
 
 body {
 	background-color: #A19FA0;
+	font-family: Helvetica, sans-serif;
 }
 
-#header {
-	background-color: #B8B6B7;
-	padding: none;
-	margin: auto;
-	width: inherit;
-}
-
-#nav_bar {
-	margin: auto;
-	padding: auto;
-	width: auto;
-}
-
-#fform {
-	background-color: white;
-}
 
 h1 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	position: relative;
+	font-weight: 900;
+	letter-spacing: -2px;
+	font-family: "Helvetica Bold", "Helvetica World Bold", sans-serif;
 }
 
-h4 {
+h2 {
+	margin: 0px;
+}
+
+h3 {
+	margin: auto;
+}
+
+h6 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
 
+table {
+	border-collapse: collapse;
+}
+
+td {
+	padding-top: 5px;
+	padding-bottom: 10px;
+	vertical-align: top;
+}
+
 footer {
 	position: relative;
+	margin: auto;
+	background-color: #f0f0f0;
+}
+
+#footertext {
+	text-align: center;
+	font-size: .75em;
+	padding: 8px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 ul {
 	display: block;
 	list-style-type: none;
 	background-color: #000000;
-	margin: 0px;
-	/*height: 27px;*/
-	padding: 0;
+	height: 40px;
+	margin: auto;
 	-webkit-margin-before: 0em;
-	-webkit-margin-after: 1em;
+	-webkit-margin-after: 5px;
 	-webkit-markin-start: 0px;
 	-webkit-margin-end: 0px;
 	-webkit-padding-start: 0px;
@@ -60,23 +79,49 @@ ul {
 
 li {
 	display: inline-block;
+	height: 100%;
 	margin-left: 0px;
 	margin-right: 0px;
+}
+
+table {
+	border-spacing: 5px;
+}
+
+td {
+	width: 200px;
 }
 
 a:link,a:visited {
 	display: block;
 	width: 100%;
+	height: 100%;
 	color: #ffffff;
 	background-color: #000000;
 	text-align: center;
-	/*padding: 6px;*/
 	text-decoration: none;
-	text-transform: uppercase;
+	padding: auto;
 }
 
 a:hover {
 	background-color: #9829fd;
+}
+
+#header {
+	background-color: #cccccc;
+	padding: 5px 10px;
+	margin: auto;
+}
+
+#nav_bar {
+	margin: auto;
+	padding: auto;
+	width: auto;
+	font-family: Helvetica, sans-serif;
+}
+
+#fform {
+	background-color: white;
 }
 
 .spacer {
@@ -85,15 +130,26 @@ a:hover {
 }
 
 .nav_button {
+	display: block;
+	margin: auto;
 	line-height: 27px;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 5px 15px;
 }
 
+#bodycontent {
+	margin-left: 10px;
+	height: auto;
+	overflow: auto;
+	margin-right: 10px;
+}
 
-/*
-if irsensor=1
-then pulsout 37
-else pulsout 0
-endif
-*/
+#left_aligned_box {
+	float: left;
+	height: 100%;
+}
+
+#right_aligned_box {
+	float: right;
+	padding: 0px;
+	background-color: #f1f0fe;
+}
